2002-11-14  Braden McDaniel  <braden@endoframe.com>

        * m4/jpeg.m4, m4/png.m4, m4/zlib.m4: Fixed problem with macros
          when using config.cache.

2002-11-11  Thomas Flynn  <tflynn@users.sourceforge.net>

        * src/openvrml/OpenVRML/ScriptJDK.cpp: Fix bugs in
          MFRotation::setValue, MFTime::insertValue and MFVec2f::addValue.

        * src/openvrml/OpenVRML/field.cpp: Fix problem with
          ArrayVector::erase.

        * java/vrml/field/MFRotation.java: Fix bug in setValue method.

        * java/vrml/field/MFVec2f.java, java/vrml/field/MFVec3f.java:
          Add additional comments.

        * models/TestJSAI.java: Add tests for MFNode, MFRotation, MFTime,
          MFVec2f and MFVec3f.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: insertTextTess
          is now declared in unnamed namespace so cannot be used as
          method call on object.

2002-11-04  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h: Factored
          tesselation helper structs out of ViewerOpenGL interface.

2002-10-31  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, m4/jpeg.m4, m4/png.m4, m4/zlib.m4,
          src/openvrml/OpenVRML/Image.cpp,
          src/openvrml/OpenVRML/doc2.cpp: Improved autoconf macros for
          zlib, libpng, and libjpeg.  These macros now work a bit more
          like AC_PATH_X, and the test result is cached.

        * m4/jpeg.m4:  Fixed cut&paste error.

        * configure.ac, m4/gl.m4, m4/glut.m4, src/lookat/ViewerGlut.cpp,
          src/lookat/lookat.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Rewrote
          OpenGL/GLUT autoconf macros.  The new macros should work under
          Cygwin.

        * configure.ac, m4/gl.m4, m4/glut.m4: OV_WITH_GL only needs to
          AC_REQUIRE([AC_PATH_X]), not AC_PATH_XTRA.
